--- a/mainscene.ui
+++ b/mainscene.ui
@@ -6,8 +6,8 @@
    <rect>
     <x>0</x>
     <y>0</y>
-    <width>320</width>
-    <height>588</height>
+    <width>800</width>
+    <height>600</height>
    </rect>
   </property>
   <property name="windowTitle">
@@ -19,19 +19,19 @@
     <rect>
      <x>0</x>
      <y>0</y>
-     <width>320</width>
-     <height>26</height>
+     <width>800</width>
+     <height>29</height>
     </rect>
    </property>
    <widget class="QMenu" name="menu">
     <property name="title">
      <string>开始</string>
     </property>
-    <addaction name="actionquit"/>
+    <addaction name="actionQuit"/>
    </widget>
    <addaction name="menu"/>
   </widget>
-  <action name="actionquit">
+  <action name="actionQuit">
    <property name="text">
     <string>退出</string>
    </property>
